Fix image-background on mobile

--- a/app/styles/pages/our_programs/sycamore-tree.scss
+++ b/app/styles/pages/our_programs/sycamore-tree.scss
@@ -11,6 +11,10 @@
             width: 50%;
             object-fit: cover;
             height: 10rem;
+
+            @media only screen and (max-width: 600px) {
+                width: 100%;
+            }
         }
     }
 }
