--- a/app/styles/pages/pages-shared.scss
+++ b/app/styles/pages/pages-shared.scss
@@ -80,11 +80,6 @@
         align-items: center;
         justify-content: center;
 
-        @media only screen and (max-width: 600px) {
-            background-size: 120% 12rem;
-            padding: 2rem;
-        }
-
         h1 {
             font-family: fonts.$pfc-cursive;
             font-size: 2.6rem;
@@ -100,7 +95,7 @@
         }
 
         &.image-background {
-            padding: 6rem 0;
+            padding: 6rem 1rem;
 
             @media only screen and (max-width: 600px) {
                 padding: 1rem 0;
@@ -108,6 +103,7 @@
 
             h1 {
                 font-size: 4rem;
+                margin: 0;
 
                 @media only screen and (max-width: 600px) {
                     font-size: 1.6rem;
@@ -121,6 +117,10 @@
                     font-size: 1rem;
                 }
             }
+
+            @media only screen and (max-width: 600px) {
+                padding: 3rem 1rem;
+            }
         }
 
         &.image-background.road {
@@ -129,6 +129,7 @@
 
         &.image-background.flower {
             background-image: url(/images/shared/iStock-1206800966-e1646343901675.jpg);
+            background-position: center 0;
         }
 
         &.image-background.tree {
@@ -167,6 +168,10 @@
             p {
                 text-shadow: 1px 1px 2px black;
             }
+        }
+
+        @media only screen and (max-width: 600px) {
+            background-size: 120% 12rem;
         }
     }
 
@@ -309,14 +314,6 @@
         justify-content: space-between;
         align-items: flex-start;
 
-        @media only screen and (max-width: 600px) {
-            display: flex;
-            flex-direction: column;
-            align-items: stretch;
-            grid-row-gap: 1rem;
-            grid-column-gap: 1rem;
-        }
-
         &.bigger-text {
             grid-template-columns: 30% calc(70% - 2rem);
         }
@@ -366,6 +363,14 @@
 
         li {
             list-style: initial;
+        }
+
+        @media only screen and (max-width: 600px) {
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+            grid-row-gap: 1rem;
+            grid-column-gap: 1rem;
         }
     }
 
